<resources>
    <string name="app_name">UNIC Business</string>

    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JOHN DOE</string>
    <string name="nav_header_subtitle">JOHNDOE@EXAMPLE.COM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="company_full_name">UNIFIED NETWORK FOR INFORMATION AND COMMUNICATION</string>

    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="full_name">FULL NAME</string>
    <string name="email">E-MAIL</string>
    <string name="phone">PHONE</string>
    <string name="otp">OTP</string>
    <string name="have_prev_account">"Already have an account?"</string>

    <string name="menu_home">HOME</string>
    <string name="menu_my_apps">MY SHOPS</string>
    <string name="menu_my_orders">MY ORDERS</string>
    <string name="menu_help">HELP</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_qr">MY QR</string>
    <string name="menu_notifications">NOTIFICATIONS</string>
    <string name="menu_my_products">MY PRODUCTS</string>
    <string name="menu_my_reports">MY REPORTS</string>
    <string name="menu_logout">SIGN OUT</string>

    <string name="menu_about_us">ABOUT US</string>
    <string name="menu_share">SHARE</string>
    <string name="menu_feedback">FEEDBACK</string>
    <string name="menu_faq">FAQs</string>

    <string name="tab_title_trending">Trending</string>
    <string name="tab_title_subscribed">Subscribed</string>

    <string name="success_message">Success!</string>
    <string name="collected">collected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myorders_tv2">Your order information will be forwarded to your email</string>
    <string name="myorders">My Orders</string>
    <string name="tvnext">What happens next?</string>
    <string name="ordersinfo1">We will inform you when the package is ready</string>
    <string name="ordersinfo2">Your products will be shipped in 2–3 days</string>
    <string name="ordersinfo3">You will receive an email when the package is delivered</string>

    <string name="map_api_key">pk.eyJ1IjoicHNrMTEwMyIsImEiOiJjazhxNjM2MTUwMGoyM2xucXcwOGxieGhlIn0.C4WLlBI0995yKMsWur8FIQ</string>

    <string name="successful_order">Order placed successfully</string>
    <string name="nav_to_home">Back to Home</string>
    <string name="confirmation">Confirmation</string>
    <string name="received_orders">Orders Received</string>
    <string name="view_orders">View all your orders here.</string>
    <string name="my_qr">My QR</string>
    <string name="special_qr">Your specialised QR code</string>
    <string name="my_products">My Products</string>
    <string name="edit_products">Add, remove and modify your list of products</string>
    <string name="my_report">My Report</string>
    <string name="analysis">Detailed analysis of your sales</string>
    <string name="management">Manage notifications, order limit, etc</string>
    <string name="settings">Settings</string>
    <string name="my_apps">My Shops</string>
    <string name="see_apps">View all your shops here.</string>
    <string name="msg_token_fmt">Got string</string>

    <string-array name="what_to_do">
        <item>Add Images</item>
        <item>Display Categories</item>
        <item>Show Advertisements</item>
        <item>Display Products</item>
        <item>Default: All in One</item>
    </string-array>
    <string-array name="spinner_array">
        <item>All Products</item>
        <item>Categories</item>
        <item>Company</item>
        <!-- <item>Price</item>
        <item>Tags</item> -->

    </string-array>
    <string-array name="roles">
        <item>Salesman</item>
        <item>Delivery Man</item>
        <item>Dispatcher</item>
        <item>Preparer</item>
    </string-array>

    <string-array name="category_or_company">
        <item>Categories</item>
        <item>Companies</item>
    </string-array>

    <string-array name="order_status_types">
        <item>Pending</item>
        <item>Approved</item>
        <item>Delivered</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="report_date_options">
        <item>Today</item>
        <item>Past 3 days</item>
        <item>Past week</item>
        <item>Past month</item>
        <item>Custom</item>
    </string-array>

</resources>
