<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v1"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/confirm_circle1"
        android:backgroundTint="@color/grey5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/confirm_circle1"
        android:backgroundTint="@color/grey6"
        app:layout_constraintBottom_toBottomOf="@id/v1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/v1" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@id/v2"
        app:layout_constraintLeft_toLeftOf="@id/v2"
        app:layout_constraintRight_toRightOf="@id/v2"
        app:layout_constraintTop_toTopOf="@id/v2"
        android:contentDescription="@string/confirmation" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_bold_normal"
        android:text="@string/confirmation"
        android:textColor="@color/colourIcon"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_normal"
        android:text="@string/successful_order"
        android:textColor="@color/darkest"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <Button
        android:id="@+id/confirmation_return_home"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/green"
        android:text="@string/nav_to_home"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3" />


</androidx.constraintlayout.widget.ConstraintLayout>