<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvWorkspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:text="Workspace"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"


                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.222"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWorkspace"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/order_icon"
                    android:layout_width="47dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:elevation="2dp"
                    android:src="@drawable/clipboardlist"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/received_orders"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginEnd="5dp"
                    android:elevation="2dp"
                    android:text="@string/view_orders"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_apps"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"

                android:elevation="5dp"

                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.222"
                app:layout_constraintLeft_toRightOf="@id/card_view"
                app:layout_constraintTop_toBottomOf="@id/tvWorkspace"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/apps_icon"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:elevation="2dp"
                    android:src="@drawable/materialapps"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/my_apps"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginRight="5dp"
                    android:elevation="2dp"
                    android:text="@string/see_apps"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.222"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/settings_icon"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="57dp"
                    android:elevation="2dp"
                    android:src="@drawable/settings"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/settings"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="78dp"
                    android:elevation="2dp"
                    android:text="@string/management"
                    android:textAlignment="center"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_qr"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="12dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.222"
                app:layout_constraintLeft_toRightOf="@id/card_view3"
                app:layout_constraintTop_toBottomOf="@id/card_view_apps"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/qr_icon"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="57dp"
                    android:elevation="2dp"
                    android:src="@drawable/qrcode"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/my_qr"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="75dp"
                    android:elevation="2dp"
                    android:text="@string/special_qr"
                    android:textAlignment="center"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.222"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view3"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/notify_icon"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="57dp"
                    android:elevation="2dp"
                    android:src="@drawable/notifications_icon"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="Notifications"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="75dp"
                    android:elevation="2dp"
                    android:text="Notify your customers."
                    android:textAlignment="center"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="12dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.222"
                app:layout_constraintLeft_toRightOf="@id/card_view5"
                app:layout_constraintTop_toBottomOf="@id/card_view_qr"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/products_icon"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:src="@drawable/shoppingbag"
                    android:tint="#FFFFFF" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/my_products"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="78dp"
                    android:elevation="2dp"
                    android:text="@string/edit_products"
                    android:textAlignment="center"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="25dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.225"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view5"
                app:layout_constraintWidth_percent="0.425">

                <View
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/home_page_circle" />

                <ImageView
                    android:id="@+id/report_icon"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="57dp"
                    android:elevation="2dp"
                    android:src="@drawable/analytics"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/my_report"
                    android:textColor="@color/darkest"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="75dp"
                    android:elevation="2dp"
                    android:text="@string/analysis"
                    android:textAlignment="center"
                    android:textColor="#222222"
                    android:textSize="11sp" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>